--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="ar" dir="rtl">
 <head>
@@ -6,7 +7,7 @@
     <title>𝑮𝑨𝑴𝑬 𝑺𝑻𝑶𝑹𝑬</title>
     <style>
         body {
-            font-family: 'Cairo', sans-serif;
+            font-family:  Cairo , sans-serif;
             margin: 0;
             padding: 0;
             background-color: #1a1a1a;
@@ -155,13 +156,13 @@
                 <h3>60 UC</h3>
                 <p>55 EGP</p>
                 <input type="number" id="quantity-60" min="1" value="1">
-                <a href="https://wa.me/01097169122?text=أريد%20شراء%20%60%20UC%20×%20%60" class="btn">اطلب الآن 🛍</a>
+                <a href="https://wa.me/201097169122?text=أريد%20شراء%20%60%20UC%20×%20%60" class="btn">اطلب الآن 🛍</a>
             </div>
             <div class="price-box">
                 <h3>120 UC</h3>
                 <p>109 EGP</p>
                 <input type="number" id="quantity-120" min="1" value="1">
-                <a href="https://wa.me/01097169122?text=أريد%20شراء%20%60120%20UC%20×%20%60" class="btn">اطلب الآن 🛍</a>
+                <a href="https://wa.me/201097169122?text=أريد%20شراء%20%60120%20UC%20×%20%60" class="btn">اطلب الآن 🛍</a>
             </div>
         </div>
     </div>
@@ -174,19 +175,19 @@
                 <h3>100 Diamonds</h3>
                 <p>65 EGP</p>
                 <input type="number" id="quantity-diamonds-100" min="1" value="1">
-                <a href="https://wa.me/01097169122?text=أريد%20شراء%20%60100%20Diamonds%20×%20%60" class="btn">اطلب الآن 🛍</a>
+                <a href="https://wa.me/201097169122?text=أريد%20شراء%20%60100%20Diamonds%20×%20%60" class="btn">اطلب الآن 🛍</a>
             </div>
             <div class="price-box">
                 <h3>210 Diamonds</h3>
                 <p>120 EGP</p>
                 <input type="number" id="quantity-diamonds-210" min="1" value="1">
-                <a href="https://wa.me/01097169122?text=أريد%20شراء%20%60210%20Diamonds%20×%20%60" class="btn">اطلب الآن 🛍</a>
+                <a href="https://wa.me/201097169122?text=أريد%20شراء%20%60210%20Diamonds%20×%20%60" class="btn">اطلب الآن 🛍</a>
             </div>
             <div class="price-box">
                 <h3>530 Diamonds</h3>
                 <p>295 EGP</p>
                 <input type="number" id="quantity-diamonds-530" min="1" value="1">
-                <a href="https://wa.me/01097169122?text=أريد%20شراء%20%60530%20Diamonds%20×%20%60" class="btn">اطلب الآن 🛍</a>
+                <a href="https://wa.me/201097169122?text=أريد%20شراء%20%60530%20Diamonds%20×%20%60" class="btn">اطلب الآن 🛍</a>
             </div>
         </div>
     </div>
@@ -199,19 +200,19 @@
                 <h3>1000 CONE</h3>
                 <p>7 EGP</p>
                 <input type="number" id="quantity-carparking-1000" min="1" value="1">
-                <a href="https://wa.me/01097169122?text=أريد%20شراء%20%601000%20CONE%20×%20%60" class="btn">اطلب الآن 🛍</a>
+                <a href="https://wa.me/201097169122?text=أريد%20شراء%20%601000%20CONE%20×%20%60" class="btn">اطلب الآن 🛍</a>
             </div>
             <div class="price-box">
                 <h3>30,000 CONE</h3>
                 <p>35 EGP</p>
                 <input type="number" id="quantity-carparking-30000" min="1" value="1">
-                <a href="https://wa.me/01097169122?text=أريد%20شراء%20%6030,000%20CONE%20×%20%60" class="btn">اطلب الآن 🛍</a>
+                <a href="https://wa.me/201097169122?text=أريد%20شراء%20%6030,000%20CONE%20×%20%60" class="btn">اطلب الآن 🛍</a>
             </div>
             <div class="price-box">
                 <h3>500,000 CONE</h3>
                 <p>55 EGP</p>
                 <input type="number" id="quantity-carparking-500000" min="1" value="1">
-                <a href="https://wa.me/01097169122?text=أريد%20شراء%20%60500,000%20CONE%20×%20%60" class="btn">اطلب الآن 🛍</a>
+                <a href="https://wa.me/201097169122?text=أريد%20شراء%20%60500,000%20CONE%20×%20%60" class="btn">اطلب الآن 🛍</a>
             </div>
         </div>
     </div>
